<resources>
    <string name="app_name">Expense Tracker Starter</string>
    <string name="april_2021"><![CDATA[< April 2021 >]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Income">income</string>
    <string name="Expense">expense</string>
    <string name="Total">total</string>
    <string name="fab_content_desc">desc</string>
    <string name="categoty">Categoty :</string>
    <string name="amount">Amount :</string>
    <string name="note">Note :</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
</resources>