<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransFragment">

    <!-- Fragment -->
    <LinearLayout
        android:id="@+id/layoutTabView"
        android:layout_width="412dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012">

        <TextView
            android:layout_width="137dp"
            android:layout_height="match_parent"
            android:text="@string/Income"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="137dp"
            android:layout_height="match_parent"
            android:text="@string/Expense"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="138dp"
            android:layout_height="match_parent"
            android:text="@string/Total"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTabView"
        app:layout_constraintVertical_bias="0.01999998">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#F44336"
                android:paddingTop="24dp"
                android:text="Test"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="295dp"
                android:layout_height="fill_parent"
                android:background="#757373"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="41dp">

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="fill_parent"
                        android:text="Title"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="Title"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="8dp"
                    android:text="Secondary_text"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

</androidx.constraintlayout.widget.ConstraintLayout>